# kinodata-3D-affinity-prediction

./: .gitignore  LICENSE  README.md  analyze_ig.ipynb  cgnn.yaml  cgnn_3d.yaml  covalent.yaml  data.ipynb  dev_config.yaml  dti.yaml  environment.yml  environment_lilac.yml  environment_old.yml  fetch_ig_result.sh  ligand_gin.yaml  pyproject.toml  setup.py  sweep.yaml  test_ligand_gnn_baseline.py  test_model.py  train.py  train_dti_baseline.py  train_egnn.py  train_ligand_baseline.py  train_ligand_gnn_baseline.py  train_regressor.py
condor/: .nfs000000000446177e00000288  cgnn_all_data.sub  check_output.sh  cleanup.sh  create_dataset.sh  crocodoc.sh  crocodoc.sub  crocodoc_ig.sh  crocodoc_ig.sub  crocodoc_res.sh  crocodoc_res.sub  crocodoc_resid.sh  crocodoc_resid.sub  crocodoc_voxel.sh  crocodoc_voxel.sub  docker_stderror  joschka.sub  kissim_dti.sub  models.txt  paula.sub  pl_mask_baseline.sub  reusable.sub  show_recent.sh  status.sh  sub.sh  test_env.sh  test_env.sub  tmp09e8q5ag.json  tmp1krzzwtu.json  tmp1s62k2_a.json  tmp2mkkn89d.json  tmp3p3kmm8v.json  tmp3wtlh0ad.json  tmp4j4h75ud.json  tmp54opxn3t.json  tmp5a4r1h50.json  tmp6cq5lwnh.json  tmp74hmdg80.json  tmp79uc8e52.json  tmp89heaoii.json  (+55 more)
data/: docking_benchmark_dataset.csv
docker/: Dockerfile  environment.yml
eval_data/: README.md  covalent_transformer_eval_data.csv  dti_eval_data.csv  dti_less_features_eval_data.csv  dti_runs.csv  egnnr12_eval_data.csv  pocket_clusters_with_klifs.csv  pocket_klifs_metadata.csv  relegnn_eval_data.csv  train_runs.csv
examples/: MakePDBs.ipynb  MergeData.ipynb  (+11 more)
(+160 files in other folders)
